# ColonyCounter

./: .gitignore  README.md  build_exe.bat  colony_counter.py  colony_counter_v1.1.py  colony_counter_v2.0.py  pyproject.toml  requirements.txt  run.bat  setup.bat
colony_counter/: __main__.py  app.py
colony_counter/core/: app_state.py  cache.py  calculations.py  constants.py  io_utils.py  learning.py  processing.py  session.py
colony_counter/export/: csv_export.py  excel_export.py  image_export.py  pdf_export.py
colony_counter/ui/: logo.py  theme.py  widgets.py
tests/: test_calculations.py  test_io_utils.py  test_processing.py
